MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1653 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -37,6 +37,7 @@ error.expedient.relacionar=Error al relacionar el expediente
 error.camp.codi.buit=El camp codi no pot estar buit
 error.camp.codi.char.nok=El codi no pot contenir punts
 error.camp.codi.maymin=El codi no pot començar amb una lletra majúscula i a continuació una minúscula
+error.camp.codi.char.espai=El codi no pot contenir espais en blanc
 error.camp.enumdomcons.buit=s''ha d''especificar una enumeració, un domini o una consulta
 error.camp.enumdomcons.tots=Només s''ha d''especificar un domini, una enumeració o una consulta
 error.camp.domini=Seleccioni un o altre
