--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -319,6 +319,7 @@ expedient.massiva.tasca.doc.generar=Generar document
 expedient.massiva.tasca.reg.borrar=Borrar registre
 expedient.massiva.tasca.reg.guardar=Guardar registre
 expedient.massiva.actualitzar.dp=Actualitzar definici&#243 de proc&#233;s
+expedient.massiva.actualitzar.dp.alter=Actualitzar definici&#243 de proc&#233;s
 
 execucions.massives.no=No s''ha programat cap acció massiva
 execucions.mesura.temps.no=No s'han trobat mesures de temps
