MID: 746. MSG: Opció d'eliminar el valors anteriors al importar enumeracions a partir de fitxers
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1660 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1016,6 +1016,7 @@ defproc.deploy.item_buit=Qualsevol de l'entorn
 defproc.deploy.arxiu_exp=Arxiu exportat
 defproc.deploy.desplegar=Desplegar
 defproc.deploy.expedients.actualitzar=Actualitzar expedients actius?
+defproc.deploy.expedients.actualitzar.eliminar=Eliminar valors anteriors?
 
 defproc.docform.es_plantilla=És plantilla
 defproc.docform.selec_camp=Seleccioni un camp
