MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1665 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -20,10 +20,10 @@ expedient.llistat.filtre.camp.numero=Número
 expedient.llistat.filtre.camp.titol=Títol
 expedient.llistat.filtre.camp.expedient.tipus=Tipus d'expedient
 expedient.llistat.filtre.camp.estat=Estat
-expedient.llistat.filtre.camp.data.inici=Data d'inici
+expedient.llistat.filtre.camp.data.inici=Interval dates d'inici
 expedient.llistat.filtre.camp.data.inici.1=Data inici inicial
 expedient.llistat.filtre.camp.data.inici.2=Data inici final
-expedient.llistat.filtre.camp.data.fi=Data de fi
+expedient.llistat.filtre.camp.data.fi=Interval dates de finalització
 expedient.llistat.filtre.camp.data.fi.1=Data fi inicial
 expedient.llistat.filtre.camp.data.fi.2=Data fi final
 expedient.llistat.filtre.camp.geopos=Geoposició
@@ -212,10 +212,10 @@ tasca.llistat.filtre.camp.expedient=Expedient
 tasca.llistat.filtre.camp.prioritat=Prioritat
 tasca.llistat.filtre.camp.tipexp=Tipus d'expedient
 tasca.llistat.filtre.camp.tasca=Tasca
-tasca.llistat.filtre.camp.datcre=Data de creació
+tasca.llistat.filtre.camp.datcre=Interval dates de creació
 tasca.llistat.filtre.camp.datcre.ini=Data creació inicial
 tasca.llistat.filtre.camp.datcre.fin=Data creació final
-tasca.llistat.filtre.camp.datlim=Data límit
+tasca.llistat.filtre.camp.datlim=Interval dates límit
 tasca.llistat.filtre.camp.datlim.ini=Data límit inicial
 tasca.llistat.filtre.camp.datlim.fin=Data límit final
 tasca.llistat.filtre.camp.meves=Només les meves tasques
