MID: 741. MSG: Nova interfície v3
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1667 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -342,6 +342,8 @@ error.expedientTipus.any.format.sequencia=Hi ha seqüències amb format incorrecte
 
 error.usurol.buit=L'usuari/Rol no pot ser buit
 
+error.festiu.modificar=Error al modificar el festiu
+
 # ##########
 # Datatables
 # ##########
