--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -318,3 +318,5 @@ perfil.usuari.nota.filtre.defecte=Llistat d'expedients filtra per defecte o no e
 termini.data_ini=Data inici
 termini.data_fi=Data fi
 termini.durada=Durada
+
+configuracio.festius.titol=Calendari de dies festius
