--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -805,6 +805,7 @@ common.icon.numero=Número
 common.icones.doc.psigna.id=Id del portasignatures
 common.icones.doc.psigna.data.enviat=Enviat el
 common.icones.doc.psigna.estat=Estat
+common.icones.doc.psigna.motiu.rebuig=Motiu de rebuig
 common.icones.doc.psigna.data.proces.primer=Data resposta portasignatures
 common.icones.doc.psigna.data.proces.darrer=Data darrer intent de processar
 common.icones.doc.psigna.error.processant=Error al processar
