git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1701 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -163,7 +163,7 @@ expedient.eines.script=Script
 expedient.eines.canviar_versio_proces=Canviar la versió del procés
 expedient.eines.canviar_versio=Canviar a la versió
 expedient.eines.modificar_variables=Variables
-expedient.eines.reassignar.tipus=Tipus d''expressió
+expedient.eines.reassignar.tipus=Tipus d'expressió
 expedient.eines.reassignar_tasques=Tasca
 expedient.info.informacio=Informació de l'expedient
 expedient.info.confirm.accio.executar=Estau segur que voleu executar aquesta acció?
