MID: 0000707 MSG: Possibilitat de desactivar guardat de logs per tipus d'expedient
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1714 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -284,6 +284,7 @@ expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedien
 expedient.tipus.form.any=Any
 expedient.tipus.form.sequencia=Seqüència
 expedient.tipus.form.seq_actuals=Seqüències actuals
+expedient.tipus.form.amb_retroaccio=Permet realitzar retroacció
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
