MID: 0000716 MSG: Millora de rendiment i visualització d'execucions massives pendents, finalitzades i amb error. Paginació i càrrega de detall només al desplegar cada execució massiva. Resaltar expedients i execucions amb errors.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1725 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -713,6 +713,8 @@ comuns.expedients=Expedients
 comuns.informes=Informes
 comuns.activitat=Activitat
 comuns.desfer=Desfer
+comuns.next=Següent
+comuns.previous=Anterior
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
