--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -74,7 +74,10 @@ expedient.tramitacio.massiva.header.nom=Nom tramitació
 expedient.tramitacio.massiva.header.execucio=Execució
 expedient.tramitacio.massiva.header.dataInici=Data inici
 expedient.tramitacio.massiva.header.dataFi=Data Fi
-expedient.tramitacio.massiva.header.usuari=Usuari
+expedient.tramitacio.massiva.header.data=Data
+expedient.tramitacio.massiva.header.usuari=Creada per
+expedient.tramitacio.massiva.header.error=Errors
+expedient.tramitacio.massiva.header.ok=Ok
 
 expedient.informe.canviar=Canviar consulta
 
