MID: 0000717 MSG: Merge dels canvis de la branca 3.0
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1728 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -284,7 +284,6 @@ expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedien
 expedient.tipus.form.any=Any
 expedient.tipus.form.sequencia=Seqüència
 expedient.tipus.form.seq_actuals=Seqüències actuals
-expedient.tipus.form.amb_retroaccio=Permet realitzar retroacció
 
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
@@ -714,6 +713,8 @@ comuns.expedients=Expedients
 comuns.informes=Informes
 comuns.activitat=Activitat
 comuns.desfer=Desfer
+comuns.next=Següent
+comuns.previous=Anterior
 
 alerta.llistat.alertes=Alertes
 alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
