--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -9,8 +9,6 @@ decorator.menu.consultes=Consultes
 decorator.menu.consultes.generic=Consulta general
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
-decorator.menu.administracio.monitor.integracio=Monitor integracions
-decorator.menu.administracio.monitor.domini=Monitor dominis
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
@@ -76,7 +74,10 @@ expedient.tramitacio.massiva.header.nom=Nom tramitació
 expedient.tramitacio.massiva.header.execucio=Execució
 expedient.tramitacio.massiva.header.dataInici=Data inici
 expedient.tramitacio.massiva.header.dataFi=Data Fi
-expedient.tramitacio.massiva.header.usuari=Usuari
+expedient.tramitacio.massiva.header.data=Data
+expedient.tramitacio.massiva.header.usuari=Creada per
+expedient.tramitacio.massiva.header.error=Errors
+expedient.tramitacio.massiva.header.ok=Ok
 
 expedient.informe.canviar=Canviar consulta
 
@@ -207,10 +208,6 @@ expedient.accio.modificar.titol=Modificar informació de l'expedient
 expedient.accio.modificar.boto.modificar=Modificar
 expedient.accio.buidarlog.confirmacio=Estau segur que voleu eliminar la informació de registre de l'expedient? Aquesta acció no es pot tornar enrera una vegada executada.
 expedient.accio.nom=Nombre
-
-expedient.monitor.domini.titol=Monitor de consultes a domini
-
-expedient.monitor.integracio.titol=Monitor d'integracions
 
 tasca.llistat.titol=Consulta de tasques
 tasca.llistat.filtre.camp.titol=Títol
