MID: 0000719 MSG: Solucionar problemes amb formularis externs
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1740 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1378,7 +1378,7 @@ tasca.form.error_ini=Error d'inici de formulari
 tasca.form.verif_signa=Verificació de signatures
 tasca.form.info_reg=Informació de registre
 tasca.form.no_validades=Les dades de la tasca no han estat validades
-tasca.form.compl_form=Per favor, obriu i completau el formulari associat a aquesta tasca
+tasca.form.compl_form=Les dades d'aquest formulari s'emplenen des d'una aplicació externa
 tasca.form.form_tasca=Formulari de la tasca
 tasca.form.guardar=Guardar
 tasca.form.validar=Validar
