MID: 0000701 MSG: Monitorització de les integracions
MID: 0000702
MSG: Monitorització dels dominis

git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1749 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -9,6 +9,8 @@ decorator.menu.consultes=Consultes
 decorator.menu.consultes.generic=Consulta general
 decorator.menu.administracio=Administració
 decorator.menu.administracio.tasques.execucio=Tasques en execució
+decorator.menu.administracio.monitor.integracio=Monitor integracions
+decorator.menu.administracio.monitor.domini=Monitor dominis
 
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
@@ -272,6 +274,22 @@ expedient.nova.data.string=Nova variable de tipus String
 expedient.nova.data.selecciona=Selecciona una opció
 expedient.nova.data.codi=Codi
 expedient.nova.data.valor=Valor
+
+monitor.domini.titol=Monitor de consultes a domini
+monitor.domini.camp.entorn=Entorn
+monitor.domini.camp.domini=Domini
+monitor.domini.columna.data=Data
+monitor.domini.columna.descripcio=Descripció
+monitor.domini.columna.tipus=Tipus
+monitor.domini.columna.estat=Resultat
+monitor.domini.info.parametres=Paràmetres de la petició
+
+monitor.integracio.titol=Monitor d'integracions
+monitor.integracio.columna.data=Data
+monitor.integracio.columna.descripcio=Descripció
+monitor.integracio.columna.tipus=Tipus
+monitor.integracio.columna.estat=Resultat
+monitor.integracio.info.parametres=Paràmetres de la petició
 
 enum.tasca.etiqueta.grup=Tasca de grup
 enum.tasca.etiqueta.CA=Cancel·lada
