MID: 0000725 MSG: Ja filtra correctament per alertes. A més s'han modificat els filtres per evitar certs errors de filtratge i s'ha afegit un filtre per mostrar expedients amb errors. Tant les alertes com els errors es poden veure des del llistat d'expedints com en la fitxa d'expedient.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1750 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -36,6 +36,8 @@ expedient.consulta.trobats=Hi ha {0} expedients que coincideixen amb els criteri
 expedient.consulta.trobatun=Hi ha un expedient que coincideix amb els criteris especificats
 expedient.consulta.notrobats=No hi ha cap expedient que coincideixi amb els criteris especificats
 expedient.consulta.error.integracions=Aquest expedient conté errors provinents d'aplicacions externes
+expedient.consulta.errors=Aquest expedient conté errors
+expedient.consulta.alertes.totals=Alertes d'expedient
 expedient.consulta.confirm.esborrar=Estau segur que voleu esborrar aquest expedient?
 expedient.consulta.confirm.anular=Estau segur que voleu anul·lar aquest expedient?
 expedient.consulta.confirm.desanular=Estau segur que voleu tornar a activar aquest expedient?
@@ -171,6 +173,7 @@ expedient.info.confirm.relacio.esborrar=Estau segur que voleu esborrar aquesta r
 expedient.info.identificacio=Identificació
 expedient.info.tipus=Tipus
 expedient.info.aturat=Aturat
+expedient.info.errors=Errors
 expedient.info.anulat=Anul\uFFFDlat
 expedient.info.tramit_origen=Tràmit d'origen
 expedient.info.iniciat_per=Iniciat per
@@ -717,7 +720,7 @@ comuns.next=Següent
 comuns.previous=Anterior
 
 alerta.llistat.alertes=Alertes
-alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta tarea?
+alerta.llistat.confirmacio=Estau segur que voleu esborrar aquesta alerta?
 alerta.llistat.creada_el=Creada el
 alerta.llistat.expedient=Expedient
 alerta.llistat.causa=Causa
