MID: 0000717 MSG: Merge dels canvis de la branca 3.0
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1751 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -12,6 +12,16 @@ decorator.menu.administracio.tasques.execucio=Tasques en execució
 decorator.menu.administracio.monitor.integracio=Monitor integracions
 decorator.menu.administracio.monitor.domini=Monitor dominis
 
+error.llistat.tipus=Tipus error
+error.llistat.text=Texte error
+error.tipus.basic=Errors Bàsics
+error.tipus.integracions=Errors d'Integracions
+error.tipus.basic.no=Sense errors bàsics
+error.tipus.integracions.no=Sense errors d'integracions
+
+alerta.llistat.marcar_com_llegida=Marcar llegida
+alerta.llistat.marcar_no_llegida=Desmarcar llegida
+
 expedient.llistat.titol=Consulta d'expedients
 expedient.llistat.tasca.ajax.error=Error al refrescar la llista d'tasques
 expedient.llistat.expedientTipusPermis.ajax.error=Error l'obtenir els permisos sobre aquest tipus d'expedient
@@ -34,6 +44,7 @@ expedient.llistat.filtre.camp.coordx=Coordenada X
 expedient.llistat.filtre.camp.coordy=Coordenada Y
 expedient.llistat.filtre.camp.tasques=Només amb tasques pendents
 expedient.llistat.filtre.camp.alertes=Només amb alertes
+expedient.llistat.filtre.camp.errors=Només amb errors
 expedient.llistat.filtre.camp.anulats=Mostra anul·lats
 expedient.llistat.filtre.camp.personals=Només amb tasques personals
 expedient.llistat.filtre.camp.meves=Només amb tasques meves
@@ -87,6 +98,9 @@ expedient.info.titol=Informació de l'expedient
 expedient.info.informacio=Informació
 expedient.info.aturat=Expedient aturat
 expedient.info.comentari=Comentari
+expedient.info.alertes=Alertes
+expedient.info.alertes.text=Aquest expedient té alertes. 
+expedient.info.alertes.complement= pendents de llegir.
 expedient.info.camp.numero=Número
 expedient.info.camp.titol=Títol
 expedient.info.camp.tipus=Tipus
@@ -193,6 +207,7 @@ expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
 
+expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
 expedient.accio.script.confirmacio=Estau segur que voleu aturar la tramitació d'aquest expedient?
 expedient.accio.aturar.camp.motiu=Motiu
@@ -267,6 +282,8 @@ tasca.tramitacio.firmes.no.complet=Hi ha documents amb firma obligatòria que est
 
 expedient.boto.nou_document=Nou document
 expedient.boto.nova_dada=Nova dada
+expedient.boto.veure_errors=Veure errors
+expedient.boto.veure_alertes=Veure alertes
 
 expedient.nova.data.nova=Nova variable
 expedient.nova.data.existent=Variables definides en el procés
