MID: 0000744 MSG: Eliminar DP no utilitzades
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1793 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -94,6 +94,7 @@ error.ordre.camp.tasca=No s''ha pogut canviar l'ordre del camp
 error.permisos.disseny.entorn=No té permisos de disseny sobre aquest entorn
 error.exist.exp.defproc=Existeixen expedients amb aquesta definició de procés
 error.exist.cons=Existeixen consultes que contenen camps que pertanyen a aquesta definició de procés
+error.exist.cons.df=La consulta "{0}" conté camps que pertanyen a la definició de procés {1} v.{2}
 error.exist.exp.tipexp=Existeixen expedients amb aquest tipus
 error.arxius.no.valid=Aquest arxiu no és un arxiu d''exportació vàlid
 error.arxiu.importar=Error llegint l''arxiu a importar\: 
@@ -170,6 +171,7 @@ error.reprendre.expedient=No s''ha pogut reprendre l'expedient
 error.expedient.no.aturat=Aquest expedient no està aturat
 error.especificar.versio.proces=No s''ha especificat cap versió de procés
 error.canviar.versio.proces=No s''ha pogut canviar la versió de procés
+error.canviar.versio.proces.logs=No s'ha pogut canviar la versió de procés degut a diferències d'estructura, entre la versió origen i la versió destí, en algun dels punts per on ja ha passat l'expedient. Per a poder canviar de versió és necessari eliminar la informació de registre (utilitzada per a retrocedir els expedients).\n
 error.executar.reassignacio=No s''ha pogut realitzar la reassignació
 
 error.exist.exp.mateix.numero=Ja existeix un expedient amb el mateix número, torni a iniciar l'expedient
