--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -439,6 +439,7 @@ info.camp.tasca.afegit=S'ha afegit el camp a la tasca
 info.camp.tasca.esborrat=S'ha esborrat el camp de la tasca
 
 info.defproc.esborrat=La definició de procés s'ha esborrat correctament
+info.defproc.esborrades=Les definicions de procés {0} s'han esborrat correctament
 info.dades.importat=Les dades s'han importat correctament
 
 txt.desplegament.jbpm=Desplegament jBPM
@@ -1168,10 +1169,14 @@ entorn.form.exp_dades=Exportar dades
 entorn.llistat.entorns=Entorns
 entorn.llistat.confirmacio.esborrar=Estau segur que voleu esborrar aquest entorn?
 entorn.llistat.confirmacio.reindexar=Estau segur que voleu reindexar aquest entorn?
+entorn.llistat.confirmacio.netejar.definicions.proces=Estau segur que voleu eliminar les definicions de procés no utilitzades?
 entorn.llistat.actiu=Actiu
 entorn.llistat.permisos=Permisos
 entorn.llistat.nou=Nou entorn
 entorn.llistat.reindexar=Reindexar
+entorn.llistat.netejar.definicions.proces=Netejar definicions de procés
+entorn.llistat.netejar.titol=Definicions de procés no utilitzades
+entorn.llistat.netejar.seleccionats=Esborrar definicions de procés seleccionades
 
 entorn.seleccio.selec_entorn=Seleccionar entorn
 entorn.seleccio.no_hi_ha=No hi ha cap entorn disponible
