MID: 0000717 MSG: Merge dels canvis de la branca 3.0
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1835 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -614,6 +614,7 @@ txt.m_baixa=Molt baixa
 info.tasca.disponible.personals=La tasca està disponible en el seu llistat de tasques personals
 info.tasca.completat=La tasca s'ha completat amb èxit
 info.tasca.completades=Totes les tasques s'han completat amb èxit
+info.tasca.finalitza.segon.pla=La tasca es finalitzarà en segon pla
 
 info.tasca.delegada=La tasca ha estat delegada amb èxit
 info.delegacio.cancelat=La delegació s'ha cancel·lat correctament
@@ -1094,6 +1095,7 @@ defproc.tascaform.recurs=Recurs amb el formulari
 defproc.tascaform.codi_form=Codi del formulari extern
 defproc.tascaform.delegableq=Delegable?
 defproc.tascaform.tramitacio.massiva=Tramitació massiva?
+defproc.tascaform.finalitzacio.segonpla=Finalització segon pla?
 
 defproc.tascallist.tasca_ini=Tasca inicial
 defproc.tascallist.signatures=Signatures
