--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -314,6 +314,8 @@ enum.tasca.etiqueta.SU=Suspesa
 enum.tasca.etiqueta.PD=Pendent
 enum.tasca.etiqueta.FI=Finalitzada
 enum.tasca.etiqueta.AG=Agafada
+enum.tasca.etiqueta.marcada.finalitzar=Marcada per finalitzar el 
+enum.tasca.etiqueta.execucio=En execució des del 
 
 enum.si=Sí
 enum.no=No
