MID: 0000717 MSG: Merge dels canvis de la branca 3.0
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1840 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -228,6 +228,7 @@ expedient.log.accio.TASCA_DOCUMENT_MODIFICAR=Modificar document de la tasca
 expedient.log.accio.TASCA_DOCUMENT_ESBORRAR=Esborrar document de la tasca
 expedient.log.accio.TASCA_DOCUMENT_SIGNAR=Signar document de la tasca
 expedient.log.accio.TASCA_COMPLETAR=Completar tramitació de la tasca
+expedient.log.accio.TASCA_MARCAR_FINALITZAR=Marcar per finalitzar en segon pla
 expedient.log.accio.TASCA_SUSPENDRE=Suspendre execució de la tasca
 expedient.log.accio.TASCA_CONTINUAR=Continuar execució de la tasca
 expedient.log.accio.TASCA_CANCELAR=Cancel·lar execució de la tasca
