MID: 0000774 MSG: Pantalla de visualització de mètriques
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1841 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -354,6 +354,8 @@ expedient.monitor.os-arch=Arquitectura
 expedient.monitor.os-version=Versi&oacute;n
 expedient.monitor.space.total=Total space
 expedient.monitor.space.free=Free space
+
+expedient.metriques=M&egrave;triques
 		
 temps.clau=Clau
 temps.darrera=Última
