MID: 0000717 MSG: Merge dels canvis de la branca 3.0
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1842 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -325,6 +325,8 @@ comu.estat.iniciat=Iniciat
 comu.estat.finalitzat=Finalitzat
 comu.filtre.filtrar=Filtrar
 comu.filtre.netejar=Netejar
+comu.filtre.exportar=Exportar
+comu.filtre.importar=Importar
 comu.boto.accions=Accions
 comu.boto.eines=Eines
 comu.boto.cancelar=Cancel·lar
@@ -360,3 +362,12 @@ termini.data_fi=Data fi
 termini.durada=Durada
 
 configuracio.festius.titol=Calendari de dies festius
+
+metriques.timers.llegenda=Llegenda:
+metriques.timers.pes=Pes: Nombre d'execucions x Temps mig d'una execució (ms)
+metriques.timers.temps.mig=Temps mig d'una execució (ms)
+metriques.timers.temps.maxim=Temps màxim (ms)
+metriques.timers.dominis=Dominis
+metriques.timers.handlers=Handlers
+metriques.timers.jobs=Jobs
+metriques.timers.generics=Genèrics
