--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -355,7 +355,9 @@ expedient.monitor.os-arch=Arquitectura
 expedient.monitor.os-version=Versi&oacute;n
 expedient.monitor.space.total=Total space
 expedient.monitor.space.free=Free space
-		
+
+expedient.metriques=M&egrave;triques
+
 temps.clau=Clau
 temps.darrera=Última
 temps.minima=Mínim
