MID: 0000779 MSG: Finalització de tasques en segón pla
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1853 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -206,6 +206,7 @@ expedient.tasca.confirmacio.agafar=Estau segur que voleu agafar aquesta tasca?
 expedient.tasca.doc.generar.confirm=Es generarà un document. Voleu continuar?
 expedient.tasca.nohiha=No hi ha tasques per a mostrar
 expedient.tasca.activa.nohiha=No hi ha tasques actives per a mostrar
+expedient.tasca.segon.pla.bloquejada=Aquesta tasca està programada per executarse en segon pla i no es pot editar.
 
 expedient.accio.errors.titol=Errors de l'expedient
 expedient.accio.aturar.titol=Aturar expedient
