MID: 0000782 MSG: Error camps data tramitacio massiva
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.0@1863 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -288,6 +288,7 @@ expedient.tipus.form.any=Any
 expedient.tipus.form.sequencia=Seqüència
 expedient.tipus.form.seq_actuals=Seqüències actuals
 
+expedient.massiva.reassignacio=Reassignació massiva de tasques
 expedient.massiva.titol=Execució d'accions massives
 expedient.massiva.info=Expedients seleccionats
 expedient.massiva.canvi=Canviar selecci&#243;
@@ -1504,5 +1505,5 @@ js.helforms.selec_valor=Seleccioni un valor
 js.helforms.confirmacio=L'execució d'aquesta acció provocarà que es guardin automaticament les dades de la tasca. Voleu continuar?
 
 filtre.expressio.usuari=Usuari
-filtre.expressio.grup=Area
+filtre.expressio.grup=Grup
 filtre.expressio.expressio=Expressió
