MID: 0000790 MSG: Canvi permisos per a retroacció.
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1880 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -288,6 +288,7 @@ expedient.tipus.form.seleccionar_any=Permetre seleccionar any d'inici d'expedien
 expedient.tipus.form.any=Any
 expedient.tipus.form.sequencia=Seqüència
 expedient.tipus.form.seq_actuals=Seqüències actuals
+expedient.tipus.form.amb_retroaccio=Amb retroacció
 
 expedient.massiva.reassignacio=Reassignació massiva de tasques
 expedient.massiva.titol=Execució d'accions massives
