MID: 0000779 MSG: Finalització de tasques en segón pla
git-svn-id: svn://svn.code.sf.net/p/gehelium/code/helium/branches/helium-3.1@1886 e3271b2b-fd41-4d56-bedf-4b5636213925

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1436,6 +1436,8 @@ tasca.info.comentari=Comentari
 tasca.info.supervisarq=Supervisar?
 tasca.info.delegar=Delegar
 tasca.info.massiva=Tramitació massiva activada. Les modificacions es propagaran a múltiples tasques.
+tasca.info.titol.info.segonpla=Missatges d'execució en segón pla de la tasca 
+tasca.info.no.missatges.segonpla=No hi ha missatges per mostrar...
 tasca.delegar.select=Seleccionau un destinatari
 
 tasca.pllistat.tasq_pendents=Tasques pendents
