77: Merge dels canvis de la branca 3.0. (MID:0000717)
Task-Url: http://github.com/GovernIB/helium/issues/issue/77

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -141,6 +141,7 @@ error.permisos.esborrar.expedient=No té permisos per esborrar aquest expedient
 error.permisos.consultar.expedient=No té permisos per consultar aquest expedient
 error.permisos.modificar.expedient=No té permisos per modificar aquest expedient
 error.permisos.anular.expedient=No té permisos per anul·lar aquest expedient
+error.permisos.script.expedient=No té permisos per executar scrits sobre aquest expedient
 
 error.esborrar.dada.proces=No s''ha pogut esborrar la dada del procés
 error.esborrar.dada.tasca=No s''ha pogut esborrar la dada de la tasca
@@ -159,6 +160,7 @@ error.llistat.pendent.signar=No s'ha pogut consultar la llista de fitxers de l'p
 error.modificar.dades.exp=No s''han pogut modificar les dades de l'expedient
 
 error.executar.script=No s''ha pogut executar L''script
+error.executar.script.permis.no=No disposa de permisos per a executar scripts
 error.modificar.variable=No s''ha pogut modificar la variable
 error.expedient.ja.anulat=Aquest expedient ja està anulat
 error.expedient.ja.repres=Aquest expedient ja està reprès
