3: Restringir accés a l'execució d'scritps
Task-Url: http://github.com/GovernIB/helium/issues/issue/3

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -505,6 +505,7 @@ info.expedient.reprendre=L'expedient s'ha reprès correctament
 info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
 info.reindexar.executat.nprimers=La reindexació s&#39;ha executat correctament en els primers {0} expedients
 info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
+info.massiu.script.permisos.no=No disposa de permisos per a executar scripts sobre els expedients
 info.tasca.massiu.completar=S&#39;ha programat la finalització de {0} tasca(ques)
 info.tasca.massiu.guardar=S&#39;ha programat el guardat de {0} tasca(ques)
 info.tasca.massiu.validar=S&#39;ha programat la validació de {0} tasca(ques)
