--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -300,6 +300,7 @@ monitor.domini.columna.data=Data
 monitor.domini.columna.descripcio=Descripció
 monitor.domini.columna.tipus=Tipus
 monitor.domini.columna.estat=Resultat
+monitor.domini.columna.temps.resposta=Temps de resposta
 monitor.domini.info.parametres=Paràmetres de la petició
 
 monitor.integracio.titol=Monitor d'integracions
@@ -307,6 +308,7 @@ monitor.integracio.columna.data=Data
 monitor.integracio.columna.descripcio=Descripció
 monitor.integracio.columna.tipus=Tipus
 monitor.integracio.columna.estat=Resultat
+monitor.integracio.columna.temps.resposta=Temps de resposta
 monitor.integracio.info.parametres=Paràmetres de la petició
 
 enum.tasca.etiqueta.grup=Tasca de grup
