792: Eliminar DP nivell tipus d'expedient (MID: 0000797)
Task-Url: http://github.com/GovernIB/helium/issues/issue/792

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -257,6 +257,7 @@ error.consulta.informe.nofiltre=Seleccioni primer una consulta
 error.consulta.tipexp.noaut=No està autoritzat per a consultar aquest tipus d''expedient
 error.ordre.consulta=No s''ha pogut modificar l'ordre
 
+error.defpro.eliminar.constraint=No es pot eliminar la definició de procés [ {0} v.{1} ] degut a que existeixen logs (informació de retrocés) d'expedients que en fan referència.
 ##
 # Missatges d''error del package net.conselldemallorca.helium.core.model.service
 ##
