--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -446,7 +446,7 @@ info.camp.tasca.afegit=S'ha afegit el camp a la tasca
 info.camp.tasca.esborrat=S'ha esborrat el camp de la tasca
 
 info.defproc.esborrat=La definició de procés s'ha esborrat correctament
-info.defproc.esborrades=Les definicions de procés {0} s'han esborrat correctament
+info.defproc.esborrada=La definició de procés {0} v.{1} s'ha esborrat correctament
 info.dades.importat=Les dades s'han importat correctament
 
 txt.desplegament.jbpm=Desplegament jBPM
