--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -507,6 +507,7 @@ info.dada.creat=La dada s'ha creat correctament
 info.expedient.reindexat=L'expedient s&#39;ha reindexat correctament
 info.expedient.buidatlog=La informació de registre de l'expedient s'ha eliminat correctament
 info.expedient.reprendre=L'expedient s'ha reprès correctament
+info.expedient.canviversio=S'ha canviat la versió de l'expedient correctament
 info.reindexar.executat=La reindexació s&#39;ha realitzat correctament
 info.reindexar.executat.nprimers=La reindexació s&#39;ha executat correctament en els primers {0} expedients
 info.massiu.permisos.no=No disposa de permisos per a modificar els expedients
@@ -1068,6 +1069,10 @@ defproc.llistat.definicions=Definicions de procés
 defproc.llistat.confirmacio=Estau segur que voleu esborrar la darrera versió d'aquesta definició de procés?
 defproc.llistat.versions=Versions
 defproc.llistat.esborrar_darrera=Esborrar darrera versió
+defproc.llistat.llistar.afectats=Expedients relacionats
+defproc.llistat.llistar.afectats.buidar.logs=Eliminar logs
+defproc.llistat.llistar.afectats.canviar.versio=Canviar versió
+defproc.llistat.llistar.afectats.titol=Expedients afectats per la definició de procés [{0} v.{1}]
 
 defproc.tascacamps.confirmacio=Estau segur que voleu esborrar aquest camp de la tasca?
 defproc.tascacamps.vars_tasca=Variables de la tasca
