792: Eliminar DP nivell tipus d'expedient (MID: 0000797)
Task-Url: http://github.com/GovernIB/helium/issues/issue/792

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/errors.properties
@@ -259,6 +259,7 @@ error.ordre.consulta=No s''ha pogut modificar l'ordre
 
 error.defpro.eliminar.constraint=No es pot eliminar la definició de procés [ {0} v.{1} ] degut a que existeixen referències a la Base de Dades que en fan referència
 error.defpro.eliminar.constraint.taskinstance=ERROR: Existeixen tasques associades a la definició de procés antiga, tot i haver-se canviat de versió els expedients.
+error.defpro.eliminar.constraint.job=ERROR: Existeixen timers actius associats a la definició de procés antiga.
 ##
 # Missatges d''error del package net.conselldemallorca.helium.core.model.service
 ##
