804: Funcionalitat "Repros" de l'aplicació HELIUM (INIPAR)
Task-Url: https://github.com/GovernIB/helium/issues/issue/804

NOVA RELEASE 166

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages_v3.properties
@@ -278,6 +278,17 @@ tasca.tramitacio.form.no.validat=Les dades de la tasca no han estat validades
 tasca.tramitacio.documents.no.complet=Hi ha documents obligatoris que no han estat adjuntats a la tasca
 tasca.tramitacio.firmes.no.complet=Hi ha documents amb firma obligatòria que estan pendents de firmar
 
+repro.missatge.repro=La Repro
+repro.missatge.creat=s'ha guardat correctament
+repro.missatge.eliminat=s'ha eliminat
+repro.missatge.error.creat=no s'ha pogut guardar
+repro.missatge.error.eliminat=La Repro no s'ha pogut eliminar
+repro.missatge.error.carregat=No s'ha pogut carregar la Repro
+repro.texte.guardats=Repros guardats
+repro.texte.nom=Nom Repro
+repro.texte.guardar=Guardar Repro
+repro.texte.repros=Repros
+
 expedient.boto.nou_document=Nou document
 expedient.boto.nova_dada=Nova dada
 expedient.boto.veure_errors=Veure errors
