813: Dominis timeout i feedback
Task-Url: https://github.com/GovernIB/helium/issues/issue/813

--- a/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
+++ b/helium-webapp/src/main/resources/net/conselldemallorca/helium/webapp/i18n/messages.properties
@@ -1151,6 +1151,8 @@ domini.form.modificar=Modificar domini
 domini.form.dades_dom=Dades del domini
 domini.form.selec_tipus=Seleccioni un tipus
 domini.form.temps_cache=Temps en cache
+domini.form.timeout=Timeout
+domini.form.timeout.en_segons=En segons (buit / 0 = sense valor específic)
 domini.form.en_segons=En segons (0 = no cache)
 domini.form.dades_ws=Dades connexió WS
 domini.form.url=URL
